WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140489
Graphics corruption after Find on some pages
https://bugs.webkit.org/show_bug.cgi?id=140489
Summary
Graphics corruption after Find on some pages
Simon Fraser (smfr)
Reported
2015-01-14 21:06:17 PST
Graphics corruption after Find on some pages
Attachments
Patch
(8.86 KB, patch)
2015-01-14 21:12 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-01-14 21:07:51 PST
* STEPS TO REPRODUCE 1. Go to
http://shop.outlier.cc/shop/retail/chino.html
2. Press Cmd-f, enter "Deep tan" 3. Press enter a few times to repeat the search * RESULTS Sooner or later you'll get graphics corruption. See the screenshot.
Simon Fraser (smfr)
Comment 2
2015-01-14 21:12:25 PST
Created
attachment 244677
[details]
Patch
WebKit Commit Bot
Comment 3
2015-01-14 23:59:14 PST
Comment on
attachment 244677
[details]
Patch Clearing flags on attachment: 244677 Committed
r178490
: <
http://trac.webkit.org/changeset/178490
>
WebKit Commit Bot
Comment 4
2015-01-14 23:59:17 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug